' =========================================================
'
' =========================================================
@startuml Message
left to right direction

package "manager/message-broker" {
  namespace manager::message{
    abstract class Receiver {
      {abstract} Status receive_message(Message* message)
    }

    class Message{
    	{field}MessageId id　　　　　　
    	{field}uint64_t object_id　　
    	{field}std::vector<Receiver*> receivers
    	{field}std::string message_type_name
      {method}// C'tor
    	{method}Message(...)
      {method}
      {method}// set receiver
    	{method}void set_receiver(Receiver *receiver_)
      {method}
      {method}// getter
    	{method}MessageId   get_id()
    	{method}uint64_t    get_object_id()
      {method}std::vector<Receiver *> get_receivers()
    	{method}std::string get_message_type_name()
    }

    class CreateTableMessage {
      {method}// C'tor
    	{method}CreateTableMessage(uint64_t object_id)
    }

    class MessageBroker {
      {method}Status send_message(Message* message)
    }

    class Status
    {
        {method}//C'tor
        {method}public Status(ErrorCode error_code, int sub_error_code)
        {method}//getter
        {method}public ErrorCode get_error_code()
        {method}public int get_sub_error_code()
        {field}private ErrorCode error_code
        {field}private int sub_error_code
    }

    MessageBroker --> Message
    Message --> Receiver
    CreateTableMessage -|> Message
  }
}

@enduml
